--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -1,15 +1,15 @@
 .Phonetic {
-  margin-bottom: 20px 0;
+  margin: 20px 0;
 }
 
 .Phonetic a {
   border: 1px solid #ddd;
   text-decoration: none;
-  padding: 10px 15px;
+  padding: 8px 15px;
+  font-size: 13px;
   margin-right: 10px;
-  border-radius: 20px;
-  font-size: 12px;
   font-weight: bold;
+  border-radius: 20px;
   transition: all 150ms ease-in-out;
 }
 
@@ -19,6 +19,6 @@
 }
 
 .Phonetic .text {
-  opacity: 0.7;
+  opacity: 0.5;
   font-weight: bold;
 }
